<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/login_layout_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/textViewTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/title_register_layout"
                    android:paddingBottom="7dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="6dp"
                    android:text="@string/title_date_logare"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#a9a9a9" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewEmail"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_email"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewPassword"
                        style="@style/TitleInputText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_view_password"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/EditInputText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewPasswordAgain"
                        style="@style/TitleInputText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_view_password_again"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/editTextPasswordAgain"
                        style="@style/EditInputText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTitle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/title_register_layout"
                        android:paddingBottom="7dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="6dp"
                        android:text="@string/title_date_persoanle"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#a9a9a9" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewNume"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_nume"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editTextNume"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/hint_nume"
                            android:inputType="textPersonName" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTelefon"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_telefon"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editTextTelefon"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/hint_telefon"
                            android:inputType="number" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewVarsta"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_varsta"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editTextVarsta"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/hint_varsta"
                            android:inputType="number" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutMasina"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTitle3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/title_register_layout"
                        android:paddingBottom="7dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="6dp"
                        android:text="@string/title_masina"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#a9a9a9" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewMarca"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_marca"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <AutoCompleteTextView
                            android:id="@+id/autoCompleteMarca"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawSelectorOnTop="true"
                            android:ems="10"
                            android:hint="@string/hint_marca"
                            android:imeOptions="actionNext"
                            android:inputType="text" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewModel"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_model"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <AutoCompleteTextView
                            android:id="@+id/autoCompleteModel"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawSelectorOnTop="true"
                            android:ems="10"
                            android:hint="@string/hint_model"
                            android:imeOptions="actionNext"
                            android:inputType="text" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewAn"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_an"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editTextAn"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/hint_an"
                            android:inputType="number" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewExperienta"
                            style="@style/TitleInputText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/text_view_experienta"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Spinner
                            android:id="@+id/spinner"
                            style="@style/EditInputText"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:drawSelectorOnTop="true" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxMasina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/check_box_masina_cont" />

                <CheckBox
                    android:id="@+id/checkBoxTermeni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/check_box_termeni" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/createButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#3181d7"
                    android:onClick="createAccount"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/buton_register"
                    android:textColor="#fff" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/customProgress"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/progress_bar"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>