<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_view"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.silviu086.licenta.ModifyDate">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cont_layout_shape"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cont_textview_nume"
                android:gravity="right"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:id="@+id/textView5" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_nume"
                android:textSize="15dp"
                android:id="@+id/editTextNume" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cont_textview_telefon"
                android:gravity="right"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:id="@+id/textView6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/hint_telefon"
                android:textSize="15dp"
                android:id="@+id/editTextTelefon" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cont_textview_varsta"
                android:gravity="right"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:id="@+id/textView7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/hint_varsta"
                android:textSize="15dp"
                android:id="@+id/editTextVarsta" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right">

        <ProgressBar
            style="@style/customProgress"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp"
            android:visibility="invisible"
            android:id="@+id/progressBarModify" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_button"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:id="@+id/buttonModify" />
    </LinearLayout>

</LinearLayout>
