<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_view"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.silviu086.licenta.ModifyMasina">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cont_layout_shape"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cont_textview_marca"
                android:gravity="right"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:id="@+id/textView8" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="15dp"
                android:hint="@string/hint_marca"
                android:id="@+id/autoCompleteTextViewMarcaCont" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cont_textview_model"
                android:gravity="right"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:id="@+id/textView9" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="15dp"
                android:hint="@string/hint_model"
                android:id="@+id/autoCompleteTextViewModelCont" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cont_textview_an"
                android:gravity="right"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:id="@+id/textView10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:textSize="15dp"
                android:hint="@string/hint_an"
                android:id="@+id/editTextAnFabricatieCont" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cont_textview_experienta"
                android:gravity="right"
                android:textSize="16dp"
                android:layout_marginRight="5dp"
                android:id="@+id/textView11" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawSelectorOnTop="true"
                android:minHeight="200dp"
                android:id="@+id/spinnerExperientaCont" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <ProgressBar
            style="@style/customProgress"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp"
            android:visibility="invisible"
            android:id="@+id/progressBarModify" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlue"
            android:id="@+id/buttonModifyMasina" />
    </LinearLayout>
</LinearLayout>
